log
Fri 24 Mar 2023 03:25:43 PM UTC: 
 tests:  0|6
total_score: 0/70
2af50df
Fri 24 Mar 2023 03:26:07 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
b86b770
Fri 24 Mar 2023 03:27:45 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
8a8dce1
Fri 24 Mar 2023 03:28:41 PM UTC: 
 list.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  0|6
total_score: 0/70
04c727a
Fri 24 Mar 2023 03:30:20 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  1|5
total_score: 10/70
0cb9942
Fri 24 Mar 2023 03:40:38 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:44:3: error: ‘L’ undeclared (first use in this function)
   44 |   L->current->next = L->head;
      |   ^
list.c:44:3: note: each undeclared identifier is reported only once for each function it appears in
list.c:46:1: error: control reaches end of non-void function [-Werror=return-type]
   46 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
b698e37
Fri 24 Mar 2023 03:41:11 PM UTC: 
 list.c | 16 ++++++++--------
 1 file changed, 8 insertions(+), 8 deletions(-)
 tests:  0|0
8cb3758
Fri 24 Mar 2023 03:42:54 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
bb8975a
Fri 24 Mar 2023 03:49:47 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
478a8b5
Fri 24 Mar 2023 03:51:10 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
a7c333b
Fri 24 Mar 2023 04:00:15 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
9e53ab3
Fri 24 Mar 2023 04:02:27 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
20d46ce
Fri 24 Mar 2023 04:02:50 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
45c57a6
Fri 24 Mar 2023 04:06:44 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
0014318
Fri 24 Mar 2023 04:06:58 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
b93cda1
Fri 24 Mar 2023 04:12:04 PM UTC: 
 list.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  0|0
4787e32
Fri 24 Mar 2023 04:13:16 PM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
d6e6986
Fri 24 Mar 2023 04:17:25 PM UTC: 
 list.c | 8 +-------
 1 file changed, 1 insertion(+), 7 deletions(-)
 tests:  0|0
28940d2
Fri 24 Mar 2023 04:17:40 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
8e0e88f
Fri 24 Mar 2023 04:18:12 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
   49 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
94851cc
Fri 24 Mar 2023 04:18:27 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
297b59f
Fri 24 Mar 2023 05:36:36 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:45:3: error: statement with no effect [-Werror=unused-value]
   45 |   list
      |   ^~~~
list.c:45:7: error: expected ‘;’ before ‘return’
   45 |   list
      |       ^
      |       ;
......
   50 |   return NULL;
      |   ~~~~~~
list.c:51:1: error: control reaches end of non-void function [-Werror=return-type]
   51 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
9bf92b9
